# data-pilot-infra

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  app.py  pyproject.toml  replit.md
.github/workflows/: main.yml
data-pilot-app-main/: Dockerfile  README.md  requirements.txt
data-pilot-app-main/.github/workflows/: docker-publish.yml
data-pilot-app-main/data-pilot-app-main/test_files/: customer_data.csv
data-pilot-app-main/data-pilot-app-main/utils/: feature_engineering.py
data-pilot-app-main/test_files/: sales_data.csv
data-pilot-app-main/utils/: ml_builder.py  report_generator.py  time_series_analyzer.py
sample_data/: house_prices.csv
test_files/: TEST_INSTRUCTIONS.md  manufacturing_quality.csv  time_series_data.csv
utils/: collaboration_features.py  computer_vision.py  data_profiler.py  database_manager.py  dummy_data.py  eda_generator.py  feature_engineering.py  ml_builder.py  nlp_insights.py  time_series_analyzer.py
